syntax = "proto3";

package motif;

option go_package = "github.com/nico-i/photo-ops/services/motif/proto";

import "google/api/annotations.proto";

// The motif service definition.
service MotifService {
  // Returns bounding box information for the subject in the image.
  rpc GetBoundingBox (ImageRequest) returns (BoundingBoxResponse) {
    option (google.api.http) = {
      post: "/v1/bounding-box"
      body: "*"
    };
  }

  // Returns an image with the background removed.
  rpc GetNoBGImage (ImageRequest) returns (ImageResponse) {
    option (google.api.http) = {
      post: "/v1/no-bg"
      body: "*"
    };
  }
}

// The request message containing either the image file path or image data.
message ImageRequest {
  oneof source {
    string filePath = 1;
    bytes imageData = 2;
  }
}

// The response message containing bounding box coordinates.
message BoundingBoxResponse {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
}

// The response message containing the processed image data.
message ImageResponse {
  // The image data as bytes.
  bytes imageData = 1;
}
